--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':edittexttest', ':linerlayout', ':constraintlayout'
+include ':app', ':edittexttest', ':layoutLab', ':constraintlayout'
 rootProject.name='HelloAndroid'
